fix for color contrast issue

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ nav a {
 .number-icon {
   width: 65px;
   height: 65px;
-  border: 2px solid #9e9e9e;
+  border: 2px solid #595959;
   border-radius: 50%;
   position: relative;
 }
@@ -165,7 +165,7 @@ nav a {
 .services h3 {
   font-size: 2.6rem;
   position: absolute;
-  color: #9e9e9e;
+  color: #595959;
   font-family: "Montserrat", sans-serif;
   top: 50%;
   left: 50%;
@@ -177,7 +177,7 @@ nav a {
   color: #0a0908;
   margin: 30px 0;
   padding-bottom: 30px;
-  border-bottom: 2px solid #9e9e9e;
+  border-bottom: 2px solid #595959;
   font-size: 2rem;
 }
 .services article p {
@@ -234,7 +234,7 @@ nav a {
 .testimonials .client-category {
   margin-top: 0;
   font-size: 1.4rem;
-  color: #9e9e9e;
+  color: #595959;
 }
 .testimonials a,
 .projects-section a.cta-btn {
